// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match snapshot for default button 1`] = `
<button
  aria-disabled={false}
  className="root sizeMedium variantSecondary"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Danger button 1`] = `
<button
  aria-disabled={false}
  className="root sizeMedium variantDanger"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Primary button 1`] = `
<button
  aria-disabled={false}
  className="root sizeMedium variantPrimary"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Secondary button 1`] = `
<button
  aria-disabled={false}
  className="root sizeMedium variantSecondary"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when isFullWidth should match snapshot 1`] = `
<button
  aria-disabled={false}
  className="root sizeMedium variantSecondary fullWidth"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when loading should match snapshot for default button 1`] = `
<button
  aria-disabled={true}
  className="root sizeMedium variantSecondary loading"
  disabled={true}
>
  <span
    className="btnContent"
  />
  <ProgressSpinnerComponent
    className="spinner"
    size="medium"
    variant="secondary"
  />
</button>
`;

exports[`<Button /> when loading should match snapshot for large button 1`] = `
<button
  aria-disabled={true}
  className="root sizeLarge variantSecondary loading"
  disabled={true}
>
  <span
    className="btnContent"
  />
  <ProgressSpinnerComponent
    className="spinner"
    size="large"
    variant="secondary"
  />
</button>
`;

exports[`<Button /> when loading should match snapshot for medium button 1`] = `
<button
  aria-disabled={true}
  className="root sizeMedium variantSecondary loading"
  disabled={true}
>
  <span
    className="btnContent"
  />
  <ProgressSpinnerComponent
    className="spinner"
    size="medium"
    variant="secondary"
  />
</button>
`;

exports[`<Button /> when loading should match snapshot for small button 1`] = `
<button
  aria-disabled={true}
  className="root sizeSmall variantSecondary loading"
  disabled={true}
>
  <span
    className="btnContent"
  />
  <ProgressSpinnerComponent
    className="spinner"
    size="small"
    variant="secondary"
  />
</button>
`;

exports[`<Button /> when rounded should match snapshot 1`] = `
<button
  aria-disabled={false}
  className="root sizeMedium variantSecondary rounded"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when size variant should match snapshot for large button 1`] = `
<button
  aria-disabled={false}
  className="root sizeLarge variantSecondary"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when size variant should match snapshot for medium button 1`] = `
<button
  aria-disabled={false}
  className="root sizeMedium variantSecondary"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<Button /> when size variant should match snapshot for small button 1`] = `
<button
  aria-disabled={false}
  className="root sizeSmall variantSecondary"
  disabled={false}
>
  <span
    className="btnContent"
  />
</button>
`;
